# decbench

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  DOCKER_EVAL.md  Dockerfile  Dockerfile.compile  E2E_README.md  INSTALLATION_LOG.md  PROGRESS.md  QUICKSTART.md  README.md  e2e_coreutils_eval.py  e2e_test_3metrics.py  install.sh  pyproject.toml  rebuild_docker.sh  run_eval.sh  run_eval_quick.sh  test_full_pipeline.py  test_minimal_pipeline.py  test_single_binary.py
decbench/: __init__.py  caching.py  cli.py  config.py  dataset.py  results_store.py
docker/: README.md  compile.Dockerfile  llm-agents.Dockerfile  msvc.Dockerfile  r2dec-decompile.py  r2dec.Dockerfile  reko-decompile.sh  reko.Dockerfile  retdec.Dockerfile
docs/: ADDING_A_DECOMPILER.md  DATASET_PUBLISHING.md  DEVELOPMENT.md  EVAL_FIXUPS.md  JOERN_FAILURES.md  KUNA_FAILURES.md  LLM_DECOMPILERS.md  MSVC_SUPPORT.md  SITE_DATA_SCHEMA.md
scripts/: analyze_failures.py  compile_all.py  compute_cost_info.py  compute_dataset_info.py  cps_compile_smoke.py  decompile_one.py  export_sample_set.py  finalize_full_run.py  finalize_full_run.sh  finalize_results.py  fix_coreutils_finish.sh  ged_finalize.sh  ingest_history.py  msvc_compile_smoke.py  overnight_run.sh  partial_render.py  prune_published_dataset.py  publish_dataset.py  rebuild_dataset_from_checkpoints.py  rebuild_function_data.py  reeval_bytematch.py  reeval_ged.py  reeval_typematch.py  refresh_typematch_codeonly.py  relabel_pe_fix.py  relabel_thumb_fix.py  repair_decompiled_flags.py  repair_sample_sources.py  rerender_full_run.sh  rerun_angr_binja.py  rerun_binja.sh  restore_backend_from_backup.py  run_benchmark.py  run_progress.py  run_small.py  shard_llm_redo.py  validate_aggregates.py
site/: CNAME  app.css  app.js  index.html
tests/: __init__.py  conftest.py  example_project.toml  test_aggregate.py  test_byte_match_fixup.py  test_caching_dataset_subset.py  test_content.py  test_cost.py  test_datasets.py  test_decompilers.py  test_dewolf_backend.py  test_dockerized_decompilers.py  test_e2e_pipeline.py  test_improvements.py  test_llm_decompilers.py  test_materialized.py  test_metrics.py  test_models.py  test_publish_layout.py  test_report_extras.py  test_results_store.py  test_site.py  (+2 more)
(+170 files in other folders)
